@@ -3,7 +3,7 @@ package org.example;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.*;
 import java.util.stream.Collectors;
 import com.google.gson.Gson;
@@ -13,33 +13,39 @@ public class VehicleApp {
     private static final String API_URL = "http://localhost:3000/allVehicles";
 
     public static void main(String[] args) throws Exception {
+
         String json = getJSONFromAPI();
+
         List<Vehicle> vehicles = new Gson().fromJson(json, new TypeToken<List<Vehicle>>() {}.getType());
 
         Optional<Vehicle> mostPowerfulVehicle = vehicles.stream()
                 .max(Comparator.comparingInt(Vehicle::getPower));
-        System.out.println("Najmocniejsze auto: " + mostPowerfulVehicle.get().getModel());
+        System.out.println("Najmocniejsze auto: " + mostPowerfulVehicle.orElse(new Vehicle()).getModel() + "\n");
 
         Map<String, List<Vehicle>> vehiclesByColor = vehicles.stream()
                 .collect(Collectors.groupingBy(Vehicle::getColor));
         vehiclesByColor.forEach((color, list) -> System.out.println(color + ": " + list));
 
+        System.out.print("\n");
+
         List<Vehicle> sortedVehicles = vehicles.stream()
                 .sorted(Comparator.comparingInt(Vehicle::getYearOfProduction).reversed())
-                .collect(Collectors.toList());
+                .toList();
         sortedVehicles.forEach(System.out::println);
+
+        System.out.print("\n");
 
         vehicles.forEach(vehicle -> System.out.println(vehicle.getModel() + " - " + vehicle.getPrice()));
     }
 
-    private static String getJSONFromAPI() throws Exception {
-        URL url = new URL(API_URL);
-        HttpURLConnection con = (HttpURLConnection) url.openConnection();
+    private static String getJSONFromAPI() throws Exception{
+        URI uri = new URI(API_URL);
+        HttpURLConnection con = (HttpURLConnection) uri.toURL().openConnection();
         con.setRequestMethod("GET");
 
         int responseCode = con.getResponseCode();
         if (responseCode != 200) {
-            throw new RuntimeException("Failed to retrieve data from API. Response code: " + responseCode);
+            throw new RuntimeException("Błąd: " + responseCode);
         }
 
         BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
@@ -53,43 +59,5 @@ public class VehicleApp {
 
         return content.toString();
     }
-}
 
-class Vehicle {
-    private String model;
-    private String color;
-    private int modelYear;
-    private int power;
-    private double price;
-
-    public String getModel() {
-        return model;
-    }
-
-    public String getColor() {
-        return color;
-    }
-
-    public int getYearOfProduction() {
-        return modelYear;
-    }
-
-    public int getPower() {
-        return power;
-    }
-
-    public double getPrice() {
-        return price;
-    }
-
-    @Override
-    public String toString() {
-        return "Vehicle{" +
-                "model='" + model + '\'' +
-                ", color='" + color + '\'' +
-                ", yearOfProduction=" + modelYear +
-                ", enginePower=" + power +
-                ", price=" + price +
-                '}';
-    }
 }
